# linkedin-ai-copilot

./: .gitignore  README.md  linkedin_scraper_server.py  main.py  mcp-brightdata-test.py  package-lock.json  package.json  pyproject.toml
browser_extension/: package.json
browser_extension/src/: Header.tsx  ProfileSummary.tsx  api.ts  mock.ts  output.css  popup.tsx  types.ts  utils.ts
src/: popup.tsx
